fixed: z-index search component

--- a/components/mainSearch/mainSearch.css
+++ b/components/mainSearch/mainSearch.css
@@ -20,6 +20,9 @@ body.block {
   width: 100%;
   margin: 0 auto;
 }
+.search-wrapper.active {
+  z-index: 190;
+}
 .main-search-form {
   margin: 0 auto;
   width: 100%;
@@ -109,7 +112,7 @@ body.block {
   top: 0;
   right: 0;
   background-color: var(--black-color);
-  z-index: 8;
+  z-index: 100;
   opacity: 0;
   transition: all 0.5s ease;
   width: 100vw;
@@ -123,7 +126,7 @@ body.block {
 .search-suggestion {
   position: absolute;
   left: 0;
-  top: 100px;
+  top: 50px;
   transform: translate();
   display: none;
   flex-direction: column;
